# Jobseeking_Agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: pull_request_template.md
backend/: Dockerfile  requirements.txt
backend/app/: config.py  database.py  docx_generator.py  main.py  notifications.py  pdf_generator.py  scheduler.py
backend/app/agents/: cover_letter.py  parser.py  scout.py  tailor.py
backend/app/models/: application.py  job.py  resume_version.py  user_profile.py
backend/app/routers/: dashboard.py  files.py  jobs.py  notifications.py  profile.py  scrapers.py  settings.py
backend/app/scrapers/: __init__.py  indeed.py  linkedin.py  linkedin_guest.py  linkedin_rss.py  scheduler.py  seek.py
backend/tests/: test_api.py  test_config.py  test_database.py  test_linkedin_rss.py  test_models.py  test_notifications.py  test_pdf_generator.py  test_scout_agent.py
data/: user_profile.example.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EvaluationReport.tsx  JobCard.tsx  Layout.tsx
frontend/src/contexts/: LanguageContext.tsx  ThemeContext.tsx
frontend/src/i18n/: translations.ts
frontend/src/pages/: Dashboard.tsx  Jobs.tsx  Notifications.tsx  Profile.tsx  Resume.tsx  Scout.tsx  Scrapers.tsx  Settings.tsx
scripts/: daily_scout.py
src/jobseeking_agent/: cli.py  db.py  orchestrator.py  scheduler.py
src/jobseeking_agent/agents/: advisor.py  applier.py  resume_parser.py  scout.py  tailor.py
src/jobseeking_agent/models/: application.py  job.py  resume_version.py  user_profile.py
src/jobseeking_agent/scrapers/: linkedin.py  seek.py
src/jobseeking_agent/tui/: app.py  app.tcss
src/jobseeking_agent/tui/screens/: dashboard.py  jobs.py  profile.py  resume.py  settings.py
src/jobseeking_agent/tui/widgets/: bullet_modal.py  sidebar.py
templates/: resume.html  resume.tex.j2
web/backend/: main.py  requirements.txt
web/backend/routers/: dashboard.py  jobs.py  profile.py  scrapers.py  settings.py
web/frontend/: package.json
web/frontend/src/: App.tsx
(+6 files in other folders)
