[project]
name = "jobseeking-agent"
version = "2.0.0"
description = "Full-auto intelligent job hunting assistant"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pytz>=2024.1",
    "jinja2>=3.1.6",
]

[project.scripts]
daily-scout = "scripts.daily_scout:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scripts"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
